# openai-embeddings-adapter-hf

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
.cache/: embeddings_cache.sqlite3
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: API.md  ARCHITECTURE.md  CPM_INTEGRATION.md  DEPLOYMENT.md  OBSERVABILITY.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
k8s/: kustomization.yaml
k8s/base/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
k8s/overlays/cpu/: kustomization.yaml
k8s/overlays/gpu/: kustomization.yaml
scripts/: dev_run.sh  e2e_smoke.sh  load_test.sh
src/adapter/: embedding_engine.py  hints_cpm.py  main.py  model_loader.py  schemas_openai.py  settings.py
src/adapter/middleware/: auth.py  drain.py  rate_limit.py
src/adapter/observability/: logging.py  metrics.py  otel.py  request_id.py
src/adapter/routes/: embeddings.py  health.py  info.py  version.py
src/adapter/utils/: errors.py  response_cache.py  text_limits.py
tests/: test_auth.py  test_cache.py  test_contract_openai.py  test_cpm_hints.py  test_drain_mode.py  test_errors_openai.py  test_http_methods.py  test_info_version.py  test_metrics.py  test_model_loader.py  test_rate_limit.py  test_settings.py
