[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-openai-embeddings-adapter"
version = "0.1.0"
description = "OpenAI-compatible embeddings adapter for Hugging Face models"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Adapter Team"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=adapter --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["adapter"]

[tool.coverage.report]
show_missing = true
skip_covered = false
